fix(UPI-1144): remove api names from headings
Changes:
- remove api names from headings

Closes UPI-1144

--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -12,21 +12,21 @@ The merchant onboarding flow is a critical process designed to seamlessly integr
 #### Information Collection
 The journey begins with the operations team gathering all necessary details from the merchant. This step is foundational, ensuring that the UMAP system has all the relevant information to proceed with the onboarding process.
 
-#### Merchant Record Creation (Create Merchant API)
+#### Merchant Record Creation
 Upon collecting the merchant's information, a preliminary verification is conducted. The merchant's record is then created in the UMAP system, marking the formal initiation of their onboarding journey.
 
 <a href="/payments/umap/merchant-onboarding/create-merchant-api"target="_blank">
 <code>Create Merchant API</code> ↗
 </a>
 
-#### Checking VPA Availability (Check VPA Availability API)
+#### Checking VPA Availability
 Before a merchant can start transactions, they need a Virtual Payment Address (VPA). The system checks for the availability of the desired VPA, ensuring it's unique and can be assigned to the merchant without conflicts.
 
 <a href="/payments/umap/merchant-onboarding/check-vpa-availability-api"target="_blank">
 <code>Check VPA Availability API</code> ↗
 </a>
 
-#### VPA Creation (Create VPA API)
+#### VPA Creation
 If the VPA is available, it is created and assigned to the merchant. This final step equips the merchant with the capability to accept payments via UPI, completing the onboarding process and marking the beginning of their transaction journey on the UMAP platform.
 
 <a href="/payments/umap/merchant-onboarding/create-vpa-api"target="_blank">
@@ -42,14 +42,14 @@ By meticulously following these steps, UMAP ensures a smooth and efficient onboa
 
 ## Merchant Operations
 
-#### Merchant Txn Status Updation (Update Merchant Transaction Status API)
+#### Merchant Txn Status Updation
 If a merchant needs to be disabled by an aggregator then they can call this API to update their transaction status. If a merchant is disabled UMAP will decline all transactions to the merchant VPA. 
 
 <a href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateTxnStatus"target="_blank">
 <code>Update Merchant Transaction Status API</code> ↗
 </a>
 
-#### Merchant Record Updation(Update Merchant Configs API)
+#### Merchant Record Updation
 This API can be called to update the information associated with the merchant like settlement configs, KYC information that may be required for accepting different payment instruments on UPI.
 
 <a href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"target="_blank">
