Add images for intent and collect flow

--- a/content/payments/umap/payments/intent-qr.mdx
+++ b/content/payments/umap/payments/intent-qr.mdx
@@ -27,3 +27,11 @@ Customers use the generated payment link to commence the payment process through
 
 ### Retrieve Payment Details (Check Status API)
 Following the initiation of the transaction, the system retrieves the payment details. This retrieval is based on the payment link ID or a reference number, ensuring you have access to transaction information for confirmation and record-keeping.
+
+
+## Pay Flow Interactions
+
+<img
+  src="https://storage.googleapis.com/strapi-assets/latest/intent/intent.png"
+  alt="intent qr flow"
+/>
