Update payments and mandates with new components

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -9,46 +9,59 @@ visible_in_sidebar: true
 
 ### Context
 
-Unified Payments Interface (UPI) mandates represent a transformative feature within India's digital payment ecosystem, enabling a seamless and automated way to facilitate recurring transactions. As an integral component of the UPI framework, UPI mandates offer businesses and consumers the convenience of setting up pre-authorized debits for various types of payments such as utility bills, subscription fees, EMIs, and more. This feature not only simplifies the payment process but also enhances the reliability and efficiency of managing recurring financial commitments.
+Unified Payments Interface (UPI) mandates represent a transformative feature within India's digital payment ecosystem, enabling a seamless and automated way to facilitate recurring transactions.
+
+As an integral component of the UPI framework, UPI mandates offer businesses and consumers the convenience of setting up pre-authorized debits for various types of payments such as utility bills, subscription fees, EMIs, and more. This feature not only simplifies the payment process but also enhances the reliability and efficiency of managing recurring financial commitments.
+
 For developers and product managers integrating UPI mandates into their applications, the API specification document serves as a crucial guide. It provides detailed information on how to implement UPI mandates, ensuring secure and standardized transaction flows that comply with the guidelines set by the National Payments Corporation of India (NPCI). By leveraging UPI mandates, businesses can offer their customers a user-friendly payment experience that minimizes manual intervention and reduces the risk of missed payments.
+
 As we introduce this API specification, we aim to empower our potential customers with the tools and knowledge needed to seamlessly integrate UPI mandates into their financial services. This document outlines the technical requirements, operational workflows, and security protocols essential for harnessing the full potential of UPI mandates, thereby enabling efficient and automated recurring payments that cater to the evolving needs of the digital economy.
 
 ### Key Features
 
-Some key features of our UPI Mandate Solutions are as follows - 
-- Single API to create create any type of UPI Mandate whether that is a recurring or one-time mandate setup via intent or collect
-- Reduced setup and execution drop offs with specifying first execution amount
-- Reduced merchant touchpoints with Auto Execute and Auto Pre-notify features
-- Reduced mandate revocability by leveraging customer non revocability flags
-- Enhanced merchant notifications to give the correct status of a mandate for any merchant or end user action on the mandate with accurate NPCI error codes and responses in case of failures
-- Lesser mandate execution failures with automatic retries built in by default
+Some key features of our UPI Mandate Solutions are as follows -
+
+-   Single API to create create any type of UPI Mandate whether that is a recurring or one-time mandate setup via intent or collect
+-   Reduced setup and execution drop offs with specifying first execution amount
+-   Reduced merchant touchpoints with Auto Execute and Auto Pre-notify features
+-   Reduced mandate revocability by leveraging customer non revocability flags
+-   Enhanced merchant notifications to give the correct status of a mandate for any merchant or end user action on the mandate with accurate NPCI error codes and responses in case of failures
+-   Lesser mandate execution failures with automatic retries built in by default
+
+<br />
+
+###### Below are the available mandate products from UMAP
+
+<UMAPMandates />
 
 ### UPI Mandate Statuses
 
-A UPI mandate will flow through the below statuses throughout its lifecycle  - 
+A UPI mandate will flow through the below statuses throughout its lifecycle -
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/upi-mandate-statuses/upi-mandate-statuses.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/upi-mandate-statuses/upi-mandate-statuses.png"
+    alt="Bridge"
 />
 
-Certain UPI Mandate flows are specific to the way a UPI mandate is created - intent/QR based or collect based. These type specific flows are - 
-- Creating a UPI mandate
-- Updating a UPI mandate and 
+Certain UPI Mandate flows are specific to the way a UPI mandate is created - intent/QR based or collect based. These type specific flows are -
+
+-   Creating a UPI mandate
+-   Updating a UPI mandate and
 
 Some operations on UPI mandates are generic and not dependent on the mode of mandate creation. These are
-- Sending pre-debit notification on a UPI mandate
-- Debiting a UPI mandate
-- Revoking a UPI mandate
-- Pause/Unpause flows
+
+-   Sending pre-debit notification on a UPI mandate
+-   Debiting a UPI mandate
+-   Revoking a UPI mandate
+-   Pause/Unpause flows
 
 ### Collect Based UPI Mandates
 
-These are UPI mandates which are powered via the NPCI collect flow for mandate creation. A simple end user journey for this mandate created via a collect request  is depicted below - 
+These are UPI mandates which are powered via the NPCI collect flow for mandate creation. A simple end user journey for this mandate created via a collect request is depicted below -
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/collect-based-mandate-flow/collect-based-mandate-flow.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/collect-based-mandate-flow/collect-based-mandate-flow.png"
+    alt="Bridge"
 />
 
 ### Intent Based UPI Mandates
@@ -56,8 +69,6 @@ These are UPI mandates which are powered via the NPCI collect flow for mandate c
 These are UPI mandates which are powered via the NPCI intent flow for mandate creation. A simple end user journey for this mandate created via in-app intent is depicted below -
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/intent-based-mandate-flow/intent-based-mandate-flow.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/intent-based-mandate-flow/intent-based-mandate-flow.png"
+    alt="Bridge"
 />
-
-<NestedEndpoints />
