--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -5,37 +5,50 @@ order: 3
 visible_in_sidebar: true
 ---
 
-Landing page where we explain basics of payments
+# UMAP Payments
+
+Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India that facilitates inter-bank transactions through a mobile platform. It enables the integration of multiple bank accounts into a single mobile application, offering a seamless and secure interface for initiating and managing financial transactions.
+
+The API provides a standardized protocol for payment service providers and merchants, allowing for instant money transfers, bill payments, and merchant payments using a unique identifier (UPI ID) or QR code. UPI's API architecture simplifies the transaction process, making it accessible and efficient for users, while ensuring robust security measures are in place to protect sensitive financial information.
+
+<br />
+
+###### Below are the available products from UMAP
+
+<UMAPPayments />
 
 ## Transaction Statuses
 
 The UMAP platform ensures transparency throughout the transaction process by defining clear statuses that a transaction can assume from initiation to completion. These statuses reflect the transaction's current state, based on the responses received from various entities involved. Understanding these statuses will help merchants manage transactions effectively.
 
 ### Payment Initiated
+
 Marks the beginning of a transaction. This status is set when a customer starts a transaction using a QR Code, In-App Flow, Intent Link, or a Collect request via their personal UPI app. The merchant is immediately notified of this initiation.
 
 ### Payment Pending
+
 Indicates an intermediate, non-terminal state. A transaction enters this status due to various reasons such as system delays, failure in receiving the final notification, or system unavailability during the transaction. It signifies that the transaction is still in progress and has not yet reached a conclusive outcome.
 
 ### Payment Successful
+
 A terminal state signifying a completed transaction. This status is assigned when the transaction is successful, and the funds have been transferred to the merchant. Merchants can proceed with delivering the goods or services to the customer.
 
 ### Payment Failed
+
 Another terminal state, indicating that the transaction did not go through. Reasons for failure might include business declines or technical issues. In this scenario, the merchant has not received the funds, and the goods or services should not be delivered. Merchants are advised to inform the customer of the failure and suggest retrying the transaction.
 
 Understanding these statuses allows merchants and stakeholders to effectively track and manage their transactions, ensuring a smooth operational flow and an optimal customer experience.
-
 
 ## Conditional Flows
 
 Conditional flows are optional steps that may be executed in response to specific scenarios post-transaction:
 
 ### Dispute Retrieval (fetchById disputes API)
+
 If a customer raises a dispute regarding a transaction, this API call allows for the retrieval of dispute details using a unique identifier, facilitating timely resolution.
 
 ### Initiate Refund (create Refund API)
+
 In cases where a dispute arises or as a necessary step in the transaction process, a refund can be initiated. This API, typically prompted by the merchant, reverses the transaction amount to the customer.
 
 These steps and conditional flows ensure merchants can efficiently manage transactions, from initiation to resolution, providing a streamlined payment experience for customers through the UMAP platform.
-
-<NestedEndpoints />
