Update structure of UMAP

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Mandates
 page_title: UMAP - Mandates
 order: 4
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Mandates
