--- a/content/payments/umap/mandates/otm.mdx
+++ b/content/payments/umap/mandates/otm.mdx
@@ -2,7 +2,7 @@
 sidebar_title: One Time
 page_title: UMAP - Mandates - One Time Mandates
 order: 1
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## One Time Mandates
