--- a/content/payments/umap/mandates/single-block-multi-debit.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Single Block Multi Debit
 page_title: UMAP - Mandates - Single Block Multi Debit Mandates
 order: 3
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Single Block Multi Debit Mandates
