--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -1,25 +1,34 @@
 ---
 sidebar_title: Overview
 page_title: UMAP - Overview
-order: 1
+order: 0
 visible_in_sidebar: true
 ---
 
-## UMAP Overview
+## Overview
 
-Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India that facilitates inter-bank transactions through a mobile platform. It enables the integration of multiple bank accounts into a single mobile application, offering a seamless and secure interface for initiating and managing financial transactions. The API provides a standardized protocol for payment service providers and merchants, allowing for instant money transfers, bill payments, and merchant payments using a unique identifier (UPI ID) or QR code. UPI's API architecture simplifies the transaction process, making it accessible and efficient for users, while ensuring robust security measures are in place to protect sensitive financial information.
+### What is UPI
+
+Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India (NPCI) that facilitates inter-bank transactions through a mobile platform.
+
+By offering a seamless and secure interface, UPI simplifies financial transactions, including instant money transfers, bill payments, and merchant transactions. Through its standardized protocol, users can utilize unique identifiers (UPI IDs) or QR codes for swift payments.
+
+The API architecture of UPI streamlines transactions, ensuring accessibility and efficiency for users while maintaining stringent security protocols to safeguard financial data.
 
 ### What is UMAP
-UMAP is a comprehensive UPI product suite designed to empower merchants and aggregators by providing state-of-the-art UPI solutions. Our platform stands out for its exceptional user experience, cloud-native infrastructure, and latest UPI offerings, facilitated through a wide array of APIs tailored to meet the modern needs of digital commerce.
+
+UMAP is a comprehensive UPI product suite designed by Setu to empower `merchants` and `aggregators` by providing **state-of-the-art UPI solutions**.
+
+Our platform stands out for its exceptional user experience, cloud-native infrastructure, and latest UPI offerings, facilitated through a wide array of APIs tailored to meet the modern needs of digital commerce.
 
 #### Key Features
 
-- Wide Spectrum of UPI Offerings: Access to a complete range of UPI services, ensuring you can cater to all customer payment preferences.
-- Refund and Dispute Management: Specialized APIs for handling refunds and disputes efficiently, enabling smooth operational flow.
-- Real-Time Notifications and Updates: Stay informed with instant notifications and updates throughout the transaction process, keeping you in control of your business operations.
+-   **Wide Spectrum of UPI Offerings**: Access to a complete range of UPI services, ensuring you can cater to all customer payment preferences.
+-   **Refund and Dispute Management**: Specialized APIs for handling refunds and disputes efficiently, enabling smooth operational flow.
+-   **Real-Time Notifications and Updates**: Stay informed with instant notifications and updates throughout the transaction process, keeping you in control of your business operations.
 
-#### Benefits for Your Business
+#### Benefits for your Business
 
-- Enhanced User Experience: Our focus on seamless integration and user-friendly interfaces results in higher customer satisfaction.
-- Operational Efficiency: Our platform simplifies complex processes, from payment acceptance to dispute resolution, ensuring your business runs smoothly.
-- Informed Decision-Making: With continuous status updates & analytics, you're always equipped with the latest transaction insights
+-   **Enhanced User Experience**: Our focus on seamless integration and user-friendly interfaces results in higher customer satisfaction.
+-   **Operational Efficiency**: Our platform simplifies complex processes, from payment acceptance to dispute resolution, ensuring your business runs smoothly.
+-   **Informed Decision-Making**: With continuous status updates & analytics, you're always equipped with the latest transaction insights
