--- a/content/payments/umap/mandates/recurring.mdx
+++ b/content/payments/umap/mandates/recurring.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Recurring
 page_title: UMAP - Mandates - Recurring Mandates
 order: 2
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Recurring Mandates
