--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -2,28 +2,28 @@
 sidebar_title: Mandates
 page_title: UMAP - Notifications & Alerts - Mandates
 order: 2
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Mandates Notifications & Alerts
 
 ### UPI Mandate Statuses
 
-A UPI mandate will flow through the below statuses throughout its lifecycle  - 
+A UPI mandate will flow through the below statuses throughout its lifecycle -
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/upi-mandate-statuses/upi-mandate-statuses.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/upi-mandate-statuses/upi-mandate-statuses.png"
+    alt="Bridge"
 />
 
 ### Mandate Status Notification
 
-This is the status notification which is a part of all mandate flows which describes the final mandate status post any action taken on the resource. 
+This is the status notification which is a part of all mandate flows which describes the final mandate status post any action taken on the resource.
 
 #### Mandate Initiated
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -49,7 +49,7 @@ This is the status notification which is a part of all mandate flows which descr
 #### Mandate Live
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -75,7 +75,7 @@ This is the status notification which is a part of all mandate flows which descr
 #### Mandate Updated
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -104,7 +104,7 @@ This is the status notification which is a part of all mandate flows which descr
 #### Mandate Rejected
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -130,7 +130,7 @@ This is the status notification which is a part of all mandate flows which descr
 #### Mandate Revoked
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -157,7 +157,7 @@ This is the status notification which is a part of all mandate flows which descr
 #### Mandate Paused
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
