Remove deprecated sample aadhaar number

--- a/content/data/okyc/api-integration.mdx
+++ b/content/data/okyc/api-integration.mdx
@@ -263,8 +263,7 @@ Call this API once you have collected the following details from your customerâ€
 
 <Callout type="tip">
     For testing this API on Sandbox, use 999999990019 as the Aadhaar number for
-    success and 773032249986 for an Aadhaar that does not have a linked mobile
-    number. Any other value for Aadhaar will be considered invalid. Use 2GAD0
+    success. Any other value for Aadhaar will be considered invalid. Use 2GAD0
     for valid captcha and any other value for invalid.
 </Callout>
 
