restructure umap mandates page

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -1,23 +1,73 @@
 ---
-sidebar_title: Mandates
-page_title: UMAP - Mandates
+sidebar_title: Autopay
+page_title: UMAP - Autopay
 order: 4
 visible_in_sidebar: true
 ---
 
-## Mandates
+## Autopay
 
-### Context
+<Row>
+    <Portion desktopSpan="half">
+        <Card padding="small" shape="rounded">
+            <a href="/payments/umap/merchant-onboarding" target="_blank">
+                Aggregator Merchant Onboarding ↗
+            </a>
+            <p>
+                If you are an aggregator explore other UMAP products here
+            </p>
+        </Card>
+    </Portion>
+    <Portion desktopSpan="half">
+        <Card padding="small" shape="rounded">
+            <a href="/payments/umap/api-integration/merchants" target="_blank">
+                Merchant API Integration ↗
+            </a>
+            <p>
+                If you are a merchant explore other UMAP products here
+            </p>
+        </Card>
+    </Portion>
+</Row>
 
-Unified Payments Interface (UPI) mandates represent a transformative feature within India's digital payment ecosystem, enabling a seamless and automated way to facilitate recurring transactions.
+<hr class="primary"/>
 
-As an integral component of the UPI framework, UPI mandates offer businesses and consumers the convenience of setting up pre-authorized debits for various types of payments such as utility bills, subscription fees, EMIs, and more. This feature not only simplifies the payment process but also enhances the reliability and efficiency of managing recurring financial commitments.
+#### What is UPI Autopay ?
 
-For developers and product managers integrating UPI mandates into their applications, the API specification document serves as a crucial guide. It provides detailed information on how to implement UPI mandates, ensuring secure and standardized transaction flows that comply with the guidelines set by the National Payments Corporation of India (NPCI). By leveraging UPI mandates, businesses can offer their customers a user-friendly payment experience that minimizes manual intervention and reduces the risk of missed payments.
+Unified Payments Interface (UPI) autopay or mandates represent a transformative feature within India's digital payment ecosystem, enabling a seamless and automated way to facilitate recurring transactions.
 
-As we introduce this API specification, we aim to empower our potential customers with the tools and knowledge needed to seamlessly integrate UPI mandates into their financial services. This document outlines the technical requirements, operational workflows, and security protocols essential for harnessing the full potential of UPI mandates, thereby enabling efficient and automated recurring payments that cater to the evolving needs of the digital economy.
+As an integral component of the UPI framework, UPI autopay offer businesses and consumers the convenience of setting up pre-authorized one time / recurring debits for various types of payments such as utility bills, subscription fees, EMIs, and more. This feature not only simplifies the payment process but also enhances the reliability and efficiency of managing recurring financial commitments.
 
-### Key Features
+Mandate creation / registration is a one time activity and it allows the customer's account to be debited as per the agreed terms and conditions and recurrence schedule.
+
+#### What can I do with UPI Autopay ?
+
+Here is a list of sample use cases for the UPI Autopay products offered by UMAP
+- **Recurring mandates** can be used to collect recurring payments for use cases like **Subscriptions**, **Loan Repayments**, **Post Paid Bills**, **Mutual Fund SIPs** etc.
+For example,
+    - Stage offers streaming services. They offer a one week free trial for their users after which the user can signup for monthly plans.
+Stage doesn't want to be responsible for notifying the user and collecting payment for every subsequent subscription renewal
+To support this use case Stage can integrate with UMAP mandates to
+offer creation of a monthly UPI mandate on their website/app. 
+When a customer signs up for a monthly subscription plan, Stage registers a monthly mandate via UMAP
+and UMAP takes care of notifying the customer and executing / debiting the customer on a monthly basis.
+- **One time mandates** can be used to support use cases like **IPO Applications**, **Hotel reservations**, etc.
+For example, Zerodha wants to enable users to apply for an IPO on their platform. Based on allocation of shares decided by the sponsor bank, debit should/shouldn't happen for a user.
+To support this use case Zerodha can integrate with UMAP mandates to
+offer creation of a one time UPI mandate on their platform. 
+When a customer signs up for a monthly subscription plan, Stage registers a monthly mandate via UMAP
+and UMAP takes care of notifying the customer and executing / debiting the customer on a monthly basis.
+- **Single block multi debit mandates** can be used to support use cases for **securities brokers and dealers**
+
+#### Exlore our UPI autopay products
+
+- **One time mandates**: A one time mandate is a mandate that can only be executed / debited once.
+- **Recurring mandates**: A recurring mandate is a mandate that that can be executed / debited multiple times as per the recurrence pattern configured / agreed upon during mandate creation.
+- **Single block multi debit mandates**: A single block mutli debit mandate is a mandate that blocks a requested amount of funds in the customer's account and can be executed / debited multiple times against blocked funds.
+
+<UMAPMandates />
+
+#### Key Features
 
 Some key features of our UPI Mandate Solutions are as follows -
 
@@ -28,47 +78,11 @@ Some key features of our UPI Mandate Solutions are as follows -
 -   Enhanced merchant notifications to give the correct status of a mandate for any merchant or end user action on the mandate with accurate NPCI error codes and responses in case of failures
 -   Lesser mandate execution failures with automatic retries built in by default
 
-<br />
+#### UPI autopay statuses
 
-###### Below are the available mandate products from UMAP
-
-<UMAPMandates />
-
-### UPI Mandate Statuses
-
-A UPI mandate will flow through the below statuses throughout its lifecycle -
+A UPI autopay will flow through the below statuses throughout its lifecycle -
 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/upi-mandate-statuses/upi-mandate-statuses.png"
-    alt="Bridge"
-/>
-
-Certain UPI Mandate flows are specific to the way a UPI mandate is created - intent/QR based or collect based. These type specific flows are -
-
--   Creating a UPI mandate
--   Updating a UPI mandate and
-
-Some operations on UPI mandates are generic and not dependent on the mode of mandate creation. These are
-
--   Sending pre-debit notification on a UPI mandate
--   Debiting a UPI mandate
--   Revoking a UPI mandate
--   Pause/Unpause flows
-
-### Collect Based UPI Mandates
-
-These are UPI mandates which are powered via the NPCI collect flow for mandate creation. A simple end user journey for this mandate created via a collect request is depicted below -
-
-<img
-    src="https://storage.googleapis.com/strapi-assets/latest/collect-based-mandate-flow/collect-based-mandate-flow.png"
-    alt="Bridge"
-/>
-
-### Intent Based UPI Mandates
-
-These are UPI mandates which are powered via the NPCI intent flow for mandate creation. A simple end user journey for this mandate created via in-app intent is depicted below -
-
-<img
-    src="https://storage.googleapis.com/strapi-assets/latest/intent-based-mandate-flow/intent-based-mandate-flow.png"
     alt="Bridge"
 />
