restructure umap mandates page

--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Mandates
 page_title: UMAP - Notifications & Alerts - Mandates
 order: 2
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
 
 ## Mandates Notifications & Alerts
