--- a/content/payments/umap/mandates/otm/check-status.mdx
+++ b/content/payments/umap/mandates/otm/check-status.mdx
@@ -1,24 +1,24 @@
 ---
-sidebar_title: Check Refund Status
-page_title: UMAP - Refunds & Disputes - Check Refund Status API
-order: 2
+sidebar_title: Check Status
+page_title: UMAP - Mandates - Check Payment Status
+order: 4
 visible_in_sidebar: true
 ---
 
-## Check Refund Status API
+## Check mandate payment status
 
 <Card padding="small" shape="rounded">
-    <a href="/payments/umap/refunds-disputes/create-refund-api" target="_blank">
-        Create refund ↗
+    <a href="/payments/umap/mandates/otm/execute" target="_blank">
+        Execute Mandate ↗
     </a>
     <p>
-        Read about issuing refunds, if you haven't already
+        Read about one time mandate execution, if you haven't already
     </p>
 </Card>
 
 <hr class="primary"/>
 
-<p>The merchant will have to call the <b><i>check refund status API</i></b> with the correct set of parameters.</p>
+The merchant can use the **<i>check status API</i>** to check mandate payment status.
 
 <table>
     <tbody>
@@ -37,7 +37,7 @@ visible_in_sidebar: true
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/refunds/&#123;id&#125;</code>
+                <code>/merchants/payments/product-instances/&#123;mandateId&#125;/last</code>
             </td>
         </tr>
         <tr>
@@ -61,29 +61,38 @@ visible_in_sidebar: true
     </tbody>
 </table>
 
-### Sample response
+###### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
   "amount": 10000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "currency": "INR",
+  "customerAccountType": "savings",
+  "customerVpa": "test-auto-tyvmm59i9b@okokaxis",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
-  "merchantReferenceId": "BILL12345",
-  "paymentId": "01HKSEWQ509Z56CVQNQ2XHGJZ1",
-  "remarks": "Services not rendered",
+  "merchantId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "merchantReferenceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "merchantVpa": "test-auto-beibfev2oq@okokaxis",
+  "productInstanceId": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
+  "refId": "1240689979139556558",
+  "rrn": "124068997913",
   "status": "success",
-  "type": "online"
-}
-`}
+  "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
+  "txnNote": "testpay"
+}`}
 </CodeBlockWithCopy>
 
-<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~refund/operation~refund#fetchById" target="_blank">here</a>.</p>
+**In the above response:**
+
+-   `id` is a unique ID that is associated with this mandate payment and can be used to track it later.
+
+To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId" target="_blank">here</a>.
 
 <NextPage
     info={{
-        description: "Read about disputes.  ",
-        slug: "/payments/umap/refunds-disputes",
-        title: "Disputes",
+        description: "Other operations that can be performed on a mandate.  ",
+        slug: "/payments/umap/mandates/generic",
+        title: "Generic Operations",
     }}
 />
