--- a/content/payments/umap/mandates/single-block-multi-debit.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit.mdx
@@ -1,8 +1,81 @@
 ---
 sidebar_title: Single Block Multi Debit
 page_title: UMAP - Mandates - Single Block Multi Debit Mandates
-order: 3
+order: 1
 visible_in_sidebar: true
 ---
 
 ## Single Block Multi Debit Mandates
+
+<Card padding="small" shape="rounded">
+    <a href="/payments/umap/mandates" target="_blank">
+        UPI Autopay Overview ↗
+    </a>
+    <p>
+        Explore other UMAP UPI Autopay products here
+    </p>
+</Card>
+
+<hr class="primary"/>
+
+#### What is a Single Block Multi Debit Mandate ?
+
+A single block mutli debit mandate is a mandate that blocks a requested amount of funds in the customer's account and can be executed / debited multiple times against blocked funds.
+
+`TODO : Write a few lines on single block multi debit mandates`
+
+#### What can I do with a Single Block Multi Debit Mandate ?
+
+`TODO : Write a few lines on single block multi debit mandate use cases`
+
+<hr class="primary" />
+
+#### How it works
+
+Here is a typical list of steps involved in collecting a payment from a customer via an intent based single block multi debit mandate. Let’s use the example of `TODO: mention single block multi debit mandate use case`. In this scenario, the lender (`TODO: replace 'lender' based on use case mentioned`) is the Merchant partner that has integrated with Setu.
+
+<hr class="primary"/>
+
+###### Step 1 - create a single block multi debit mandate
+
+<ol>
+    <li><b>Merchant</b> sends single block multi debit mandate details to <b>UMAP</b> and receives a unique single block multi debit mandate creation intent link / qr to send to their <b>Customer</b>: `TODO: Redirect to intent based single block multi debit mandate creation`</li>
+    <li><b>Customer</b> clicks single block multi debit mandate creation intent link, chooses preferred UPI app / scans the qr on preferred UPI app and enters mPIN to initiate single block multi debit mandate creation.</li>
+    <li><b>UMAP</b> triggers a webhook notification on single block multi debit mandate creation initiation which the merchant can use to update single block multi debit mandate status at their end.</li>
+    <li>Once the mandate is <b>LIVE</b>, <b>UMAP</b> triggers another webhook notification which the merchant can use to mark mandate status as <b>LIVE</b> at their end.</li>
+</ol>
+
+<hr class="tertiary"/>
+
+###### Step 2 - trigger mandate execution
+
+<ol>
+    <li>Every time that a payment needs to be collected, the <b>Merchant</b> triggers mandate execution via <b>UMAP</b>.</li>
+    <li><b>Customer</b> receives a collect request notification on their UPI app, clicks on the notification and enters mPIN to authorise the payment.</li>
+</ol>
+
+<hr class="tertiary"/>
+
+###### Step 3 - check payment status
+
+<p><b>Merchant</b> can use check payment status API to check payment statuses associated to the mandate</p>
+
+<hr class="primary"/>
+
+Other operations that can be performed on a single block multi debit mandate once it is <b>LIVE</b>
+<ul>
+    <li>Updating a single block multi debit mandate</li>
+    <li>Revoking a single block multi debit mandate</li>
+    <li>Pausing a single block multi debit mandate</li>
+    <li>Unpausing a paused single block multi debit mandate</li>
+</ul>
+
+<NextPage
+    info={{
+        description: "Create single block multi debit mandate.  ",
+        slug: "/payments/umap/mandates/single-block-multi-debit/create",
+        title: "Create Single Block Multi Debit Mandate",
+    }}
+/>
+
+
