--- a/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
+++ b/content/payments/umap/refunds-disputes/fetch-dispute-api.mdx
@@ -7,8 +7,16 @@ visible_in_sidebar: true
 
 ## Fetch Dispute API
 
+<p>The merchant will have to call the <b><i>fetch dispute API</i></b> with the correct set of parameters.</p>
+
 <table>
     <tbody>
+        <tr>
+            <th>Staging Host</th>
+            <td>
+                <code>https://umap-dev-core.setu.co/api/v1</code>
+            </td>
+        </tr>
         <tr>
             <th>Method</th>
             <td>
@@ -58,6 +66,8 @@ visible_in_sidebar: true
 }`}
 </CodeBlockWithCopy>
 
-<a href="/payments/umap/api-reference#/category~disputes/operation~disputes#fetchDisputeById"target="_blank">
-<code>Fetch Dispute API</code> ↗
-</a>
+<b>In the above response:</b>
+<ul>
+    <li><code>id</code> is a unique dispute ID that is associated with this dispute and can be used to track it later.</li>
+</ul>
+<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~disputes/operation~disputes#fetchDisputeById" target="_blank">here</a>.</p>
