--- a/content/payments/umap/transaction-monitoring.mdx
+++ b/content/payments/umap/transaction-monitoring.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Transaction Monitoring
 page_title: UMAP - Transaction Monitoring
 order: 5
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Transaction Monitoring
